force-app/main/default/objects/IMESCCaseWorkflows__c/IMESCCaseWorkflows__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Values used in Trigger Implementation for reducing workflow rule limits on Case Object</description>
    <label>IME SC Case Workflows</label>
</CustomObject>