force-app/main/default/objects/IMESCCaseWorkflows__c/fields/DEUBilling__c.field-meta.xml
<CustomField>
    <fullName>DEUBilling__c</fullName>
    <label>DEUBilling</label>
    <length>50</length>
    <type>Text</type>
</CustomField>