force-app/main/default/objects/IMESCCaseWorkflows__c/fields/DEUDRCI__c.field-meta.xml
<CustomField>
    <fullName>DEUDRCI__c</fullName>
    <label>DEUDRCI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>