force-app/main/default/objects/IMESCCaseWorkflows__c/fields/Ecopetrol__c.field-meta.xml
<CustomField>
    <fullName>Ecopetrol__c</fullName>
    <description>For IMLA SC COL Ecopetrol account</description>
    <label>Ecopetrol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>