force-app/main/default/objects/IMESCCaseWorkflows__c/fields/Energy_North__c.field-meta.xml
<CustomField>
    <fullName>Energy_North__c</fullName>
    <label>Energy North</label>
    <length>50</length>
    <type>Text</type>
</CustomField>