force-app/main/default/objects/IMESCCaseWorkflows__c/fields/GBRB7__c.field-meta.xml
<CustomField>
    <fullName>GBRB7__c</fullName>
    <label>GBRB7</label>
    <length>50</length>
    <type>Text</type>
</CustomField>