force-app/main/default/objects/IMESCCaseWorkflows__c/fields/HSBC__c.field-meta.xml
<CustomField>
    <fullName>HSBC__c</fullName>
    <label>HSBC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>