force-app/main/default/objects/IMESCCaseWorkflows__c/fields/LBG__c.field-meta.xml
<CustomField>
    <fullName>LBG__c</fullName>
    <label>LBG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>