force-app/main/default/objects/IMESCCaseWorkflows__c/fields/RBS__c.field-meta.xml
<CustomField>
    <fullName>RBS__c</fullName>
    <label>RBS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>